Updated java framework spec